[gd_scene load_steps=3 format=3 uid="uid://bkctk0q56iem"]

[ext_resource type="Script" uid="uid://buhuaqcngfbut" path="res://scripts/split_window.gd" id="1_dirxl"]
[ext_resource type="PackedScene" uid="uid://c3dodjurejeur" path="res://objects/card.tscn" id="2_auqay"]

[node name="SplitWindow" type="Control"]
process_priority = 10
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dirxl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 550
theme_override_constants/margin_top = 350
theme_override_constants/margin_right = 550
theme_override_constants/margin_bottom = 350

[node name="Panel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
text = "Split Armies:"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="Card" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer" instance=ExtResource("2_auqay")]
layout_mode = 2
size_flags_horizontal = 10
collision_mask = 5

[node name="LeftEdit" type="LineEdit" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "0"
alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Split" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Split!"

[node name="Cancel" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 6
text = "Cancel"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="Card" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2" instance=ExtResource("2_auqay")]
layout_mode = 2
size_flags_horizontal = 10
collision_mask = 5

[node name="RightEdit" type="LineEdit" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(127.755, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "0"
alignment = 1

[node name="HSlider" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
rounded = true

[connection signal="text_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/LeftEdit" to="." method="_on_left_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3/Split" to="." method="_on_split_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="text_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/RightEdit" to="." method="_on_right_edit_text_changed"]
[connection signal="value_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
